GL-6: fix issue that made the scrollbar move the content

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,7 @@
 a {
   text-decoration: inherit;
 }
+
+body {
+  overflow: scroll;
+}
